remove JVM_OPTS, add instructions for snowflake