@@ -19,7 +19,7 @@ jar {
 
 startScripts {
     classpath = files('$APP_HOME/lib/*')
-    defaultJvmOpts = ["--add-opens=java.base/java.nio=org.apache.arrow.memory.core,ALL-UNNAMED"]
+    defaultJvmOpts = []
 }
 
 dependencies {
